# HyprGlassShell

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.md  Makefile  README.md  flake.nix
.agents/skills/: README.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_request.yml
.github/workflows/: go-ci.yml  release.yml  run-copr.yml  run-obs.yml  run-ppa.yml  update-vendor-hash.yml
assets/: hgs-open.desktop  hgs-terminal
assets/systemd/: hgs.service
core/: .mockery.yml  Makefile  README.md  build_hgsinstall.sh  go.mod  go.sum  install.sh
distro/fedora/: hgs-git.spec  hgs-greeter.spec  hgs.spec
distro/nix/: common.nix  greeter.nix  hgs-rename.nix  home.nix  nixos.nix  options.nix
distro/opensuse/: hgs-git.spec  hgs-greeter.spec  hgs.spec
distro/scripts/: copr-upload.sh  obs-status.sh  obs-upload.sh  ppa-build.sh  ppa-status.sh  ppa-sync-plan.sh  ppa-upload.sh
distro/ubuntu/: dput.cf.template
docs/: CUSTOM_THEMES.md  Hyprland_Lua_Migration.md  IPC.md
plugins/hgs-hyprglass/: CMakeLists.txt  Makefile  README.md
plugins/hgs-hyprglass/src/: main.cpp
quickshell/: AGENTS.md  HGSShell.qml  HGSShellIPC.qml  LICENSE_CHANGE_12_11_2025.md  README.md  shell.qml
quickshell/Common/: AppUsageHistoryData.qml  CacheData.qml  FluidGlassStyle.qml  KeyUtils.js  KeybindActions.js  LayerShell.qml  ListViewTransitions.qml  Paths.qml  PopoutManager.qml  SessionData.qml  SettingsData.qml  StockThemes.js  Theme.qml
quickshell/Modals/: AppPickerModal.qml  BluetoothPairingModal.qml  DisplayConfirmationModal.qml  HGSColorPickerModal.qml  KeybindsModal.qml  MuxModal.qml  NetworkInfoModal.qml  NetworkWiredInfoModal.qml  NotificationModal.qml  PolkitAuthContent.qml  PolkitAuthSurfaceModal.qml  PowerMenuModal.qml  PowerProfileModal.qml  ProcessListModal.qml  SwitchUserModal.qml  WifiPasswordModal.qml  WifiQRCodeModal.qml  WindowRuleModal.qml  WorkspaceRenameModal.qml
quickshell/Modules/: Toast.qml  WallpaperBackground.qml
quickshell/PLUGINS/: POPOUT_SERVICE.md  README.md  THEME_REFERENCE.md  plugin-schema.json
quickshell/Services/: AppSearchService.qml  AudioService.qml  BarWidgetService.qml  BatteryService.qml  BluetoothService.qml  BlurService.qml  CalendarHGSBackend.qml  CalendarService.qml  CavaService.qml  ChangelogService.qml  ClipboardService.qml  CompositorService.qml  CupsService.qml  DesktopService.qml  DisplayService.qml  FirstLaunchService.qml  GreeterUsersService.qml  HGSNetworkService.qml  HGSService.qml  HyprGlassService.qml  HyprlandService.qml  IdleService.qml  KeybindsService.qml  LocationService.qml  Log.qml  NetworkService.qml  NotepadStorageService.qml  PluginService.qml  PolkitService.qml  PopoutService.qml  PortalService.qml  PrivacyService.qml  SessionService.qml  SettingsSearchService.qml  SystemUpdateService.qml  (+5 more)
(+818 files in other folders)
